tinyc/test/bad/nameless-argument-definition.c
int foo( int ) { return 1; }

int main()
{
    foo( 1 );
    return 0;
}

